syntax = "proto3";

package art.ameliah.ehb.shortburst.protobuf;

option java_multiple_files = true;
option java_package = "art.ameliah.ehb.shortburst.protobuf.impl.adressbook";
option java_outer_classname = "AddressBookProtos";

option go_package = "github.com/Fesaa/EHB/BA2/java-advanced/short-burst-protobuf/server/pbd";

message Person {
  optional string name = 1;
  optional int32 id = 2;
  optional string email = 3;

  enum PhoneType {
    PHONE_TYPE_UNSPECIFIED = 0;
    PHONE_TYPE_MOBILE = 1;
    PHONE_TYPE_HOME = 2;
    PHONE_TYPE_WORK = 3;
  }

  message PhoneNumber {
    optional string number = 1;
    optional PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
}

message AddressBook {
  repeated Person people = 1;
}